# bazel-ios-swiftui-template

./: .bazelrc  .gitignore  BUILD.bazel  LICENSE  MODULE.bazel  README.md  WORKSPACE
.github/: FUNDING.yml
.github/workflows/: tests.yml  xcode_select.sh
app/: BUILD.bazel
app/launch_images_ios.xcassets/launch_image.launchimage/: Contents.json
app/source/: ContentView.swift  MainApp.swift
modules/: BUILD.bazel
modules/API/: BUILD.bazel
modules/API/API/: API.swift
modules/Models/: BUILD.bazel
modules/Models/Models/: Models.swift
tools/: BUILD.bazel  shared.bzl
