bazel_dep(name = "rules_xcodeproj", version = "1.12.1")
bazel_dep(
    name = "rules_swift",
    version = "1.6.0",
    repo_name = "build_bazel_rules_swift",
)
bazel_dep(
    name = "rules_apple",
    version = "2.0.0",
    repo_name = "build_bazel_rules_apple",
)

bazel_dep(
    name = "buildifier_prebuilt",
    version = "6.3.3",
    dev_dependency = True,
)

bazel_dep(
    name = "swiftlint",
    version = "0.52.4",
    repo_name = "SwiftLint",
)
