bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_xcodeproj", version = "2.12.1")
bazel_dep(
    name = "apple_support",
    version = "1.22.1",
    repo_name = "build_bazel_apple_support",
)
bazel_dep(
    name = "rules_swift",
    version = "3.0.2",
    repo_name = "build_bazel_rules_swift",
)
bazel_dep(
    name = "rules_apple",
    version = "4.0.1",
    repo_name = "build_bazel_rules_apple",
)

bazel_dep(
    name = "buildifier_prebuilt",
    version = "6.4.0",
    dev_dependency = True,
)

non_module_dependencies = use_extension("//tools:extensions.bzl", "non_module_dependencies")
use_repo(non_module_dependencies, "SwiftLint")
