package_group(
    name = "default_library_visibility",
    packages = [
        # The application package.
        "//app",
        # All other modules.
        "//modules/...",
    ],
    includes = [
        # Project generation.
        "@rules_xcodeproj//:generated",
    ],
)

package_group(
    name = "default_test_visibility",
    includes = [
        # Project generation.
        "@rules_xcodeproj//:generated",
    ],
)
